Add Module 6: Agentic RAG with LangChain
- Implemented intelligent agent with 4 custom tools
- Tools: SearchSimilarTickets (RAG), GetTicketByID, SearchByCategory, GetTicketStatistics
- Agent uses OpenAI function calling for tool selection
- Multi-step reasoning and conversational memory support
- Complete demo with 7 scenarios
- Comprehensive notes and 10+ exercises
- Updated requirements.txt with langgraph dependency

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ langchain==0.1.0
 langchain-openai==0.0.5
 langchain-community==0.0.13
 langchain-experimental
+langgraph>=0.0.20
 
 # LlamaIndex (for indexing strategies module)
 llama-index>=0.14.0
